--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -8,3 +8,15 @@
   publisher={Springer},
   doi={10.1023/A:1009715923555}
 }
+
+@article{Wilson2000,
+  title = {Reduction Techniques for Instance-Based Learning Algorithms},
+  author = {Wilson, D. Randall and Martinez, Tony R.},
+  journal = {Machine Learning},
+  volume = {38},
+  number = {3},
+  pages = {257--286},
+  year = {2000},
+  doi = {10.1023/A:1007626913721},
+  url = {https://doi.org/10.1023/A:1007626913721}
+}
