--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -4,6 +4,7 @@
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{hyperref}
+\usepackage{graphicx}
 \bibliographystyle{plain}
 
 % TODO: Consider adding a table of contents with \tableofcontents
