Working on k-nn results of report

--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -3,7 +3,31 @@
 
 This section interprets the results of the kNN algorithm, discussing its performance and implications.
 
+The kNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall.
+
 % TODO: Summarize the performance metrics of kNN (e.g., accuracy, precision, recall)
+
+
+
+
+\paragraph{Impact of Different k Values}
+% The choice of the parameter \( k \) significantly impacts the performance of the kNN algorithm.
+% Figure \ref{fig:k-values} illustrates how accuracy varies with different values of \( k \).
+% It was observed that the optimal value of \( k \) was 5, beyond which the performance started to degrade.
+
+% \begin{figure}[h]
+%     \centering
+%     %\includegraphics[width=0.8\textwidth]{path/to/knn-k-values-plot.png}
+%     \caption{Impact of different \( k \) values on kNN performance}
+%     \label{fig:k-values}
+% \end{figure}
+
+\paragraph{Unexpected Findings and Limitations}
+One unexpected finding was that the kNN algorithm performed poorly on imbalanced datasets.
+This limitation suggests that further preprocessing, such as oversampling or undersampling,
+might be necessary to improve performance.
+
+% Add more content here as needed
 % TODO: Compare kNN results with other methods used in the study
 % TODO: Discuss the impact of different k values on the results
 % TODO: Address any unexpected findings or limitations specific to kNN
