citations fixed in k-nn discussion

--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -20,3 +20,41 @@
   doi = {10.1023/A:1007626913721},
   url = {https://doi.org/10.1023/A:1007626913721}
 }
+
+@misc{laviale2023,
+  author = {Trevor LaViale},
+  title = {Deep Dive on KNN: Understanding and Implementing the K-Nearest Neighbors Algorithm},
+  year = {2023},
+  url = {https://arize.com/blog-course/knn-algorithm-k-nearest-neighbor/}
+}
+
+@misc{brownlee2019,
+  author = {Jason Brownlee},
+  title = {Information Gain and Mutual Information for Machine Learning},
+  year = {2019},
+  url = {https://machinelearningmastery.com/information-gain-and-mutual-information/}
+}
+
+@misc{IBM2023,
+  author = {IBM},
+  title = {What Is the k-nearest Neighbors algorithm},
+  year = {2023},
+  url = {https://www.ibm.com/topics/knn}
+}
+
+@misc{uccNotes,
+  author = {University College Cork},
+  title = {Lecture Notes - Classification},
+  url = {https://www.cs.ucc.ie/~dgb/courses/tai/notes/handout4.pdf}
+}
+
+@article{Cunningham2021,
+  author    = {Padraig Cunningham and Sarah Jane Delany},
+  title     = {k-Nearest Neighbour Classifiers - A Tutorial},
+  journal   = {ACM Computing Surveys},
+  volume    = {54},
+  number    = {6},
+  pages     = {128:1--128:25},
+  year      = {2021},
+  doi       = {10.1145/3459665}
+}
