--- a/work2/reports/03-methods/03.1-methods-knn.tex
+++ b/work2/reports/03-methods/03.1-methods-knn.tex
@@ -27,7 +27,7 @@ our focus is on classification.
 
 While the k-NN algorithm has it's merits in terms of simplicity and interpretability, it also has several disadvantages:
 \begin{itemize}
-    \item Computationally expensive: As the number of training examples grows, the algorithm's complexity increases[1]. 
+    \item Computationally expensive: As the number of training examples grows, the algorithm's complexity increases\cite{laviale2023}.
     \item Sensitive to irrelevant features: The algorithm treats all features equally, so irrelevant features can negatively impact performance.
     \item Curse of dimensionality: As the number of features increases, the algorithm requires more data to maintain performance.
 \end{itemize}
@@ -45,7 +45,7 @@ Below are the specific implementation details:
 \subsubsection*{Distance calculations}
 The Euclidean distance is used to measure the distance between data points. 
 This distance metric is the most commonly used distance metric in k-NN algorithms
-due to its simplicity and effectiveness in measuring the similarity between data points[2].
+due to its simplicity and effectiveness in measuring the similarity between data points\cite{IBM2023}.
 It operates on the principle of calculating the straight-line distance between two points in a Euclidean space, hence it's simplicity.
 
 The formula for Euclidean distance between two vectors \(x\) and \(y\) is:
@@ -90,7 +90,7 @@ With ReliefF weighting, neighbours are weighted based on their relevance to the 
 This provides a more nuanced approach to weighting as it considers the importance of each neighbour in the classification process, potentially
 improving performance of the algorithm.\\
 
-Information gain weighting, Neighbours are weighted based on gain in information in the context of the target variable [3].
+Information gain weighting, Neighbours are weighted based on gain in information in the context of the target variable\cite{brownlee2019}
 Similarly to ReliefF weighting, this weighting scheme assigns higher weights to neighbours that provide more information about the target class.\\
 
 \subsubsection*{Voting Schemes}
@@ -98,7 +98,7 @@ In the k-NN algorithm, the voting scheme determines how the class label of a new
 The following voting schemes were implemented in this study:\\
 
 In the majority voting scheme, the class label with the highest frequency among the k-nearest neighbors is assigned to the new data point.
-As well as this, each vote is given equal weight in the voting process [4].
+As well as this, each vote is given equal weight in the voting process\cite{uccNotes}
 This is the default voting scheme in k-NN and is simple and easy to implement.\\
 
 With inverse distance weighting voting, the class labels of the k-nearest neighbors are weighted based on their distance from the new data point.
@@ -109,11 +109,11 @@ of its distance to q:
 
 where \(w_i\) is the weight of the \(i\)th neighbour, \(d(q, x_i)\) is the distance between the new data point \(q\) and the \(i\)th neighbour \(x_i\).
 
-Then the votes are summed and the class with the highest votes is returned [4].\\
+Then the votes are summed and the class with the highest votes is returned\cite{uccNotes}\\
 
 Shepard's method is another voting scheme that can be used in k-NN algorithms. 
 It employs the use of an exponential function to weight the votes of the neighbours based on their distance from the new data point,
-rather than the inverse of the distance [5].
+rather than the inverse of the distance\cite{Cunningham2021}
 
 The formula for Shepard's voting scheme is:
 \begin{equation} 
@@ -309,10 +309,3 @@ The optimal combination of parameters was determined using a custom grid search 
 
 The final model was selected based on the best average performance across all folds in the cross-validation process.
 
-% References
-% [1] LaViale, T. (2023). Deep Dive on KNN: Understanding and Implementing the K-Nearest Neighbors Algorithm. [online] Arize AI. Available at: https://arize.com/blog-course/knn-algorithm-k-nearest-neighbor/.
-% [2] IBM (2023). What Is the k-nearest Neighbors algorithm? | IBM. [online] www.ibm.com. Available at: https://www.ibm.com/topics/knn.
-% [3] Brownlee, J. (2019). Information Gain and Mutual Information for Machine Learning. [online] Machine Learning Mastery. Available at: https://machinelearningmastery.com/information-gain-and-mutual-information/.
-% [4] Classification: k Nearest Neighbours. (n.d.). Available at: https://www.cs.ucc.ie/~dgb/courses/tai/notes/handout4.pdf [Accessed 26 Oct. 2024].
-% [5] Padraig Cunningham, Sarah Jane Delany, k-Nearest Neighbour Classifiers - A Tutorial. ACM Comput. Surv. 54(6): 128:1-128:25 (2021), DOI: 10.1145/3459665
-‌
