--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -3,15 +3,19 @@
 
 This section interprets the results of the kNN algorithm, discussing its performance and implications.
 
-The kNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall.
+The kNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall and the f1 score.
 
-\subsubsection*{Mushroom Dataset Performance}
+\subsubsection*{General Performance Analysis}
+As seen in Tables 1 and 2, the general performance of the k-NN algorithm was excellent across both datasets,
+achieving accuracy scores above 92\% and F1 scores above 92.5\% on all top ten configurations.
+
+\subsubsection{Mushroom Dataset Performance}
 
 \begin{description}
     \item[\textbf{Best Configuration:}]\leavevmode
         \begin{itemize}
             \item $k = 3, 5,$ or $7$ with Manhattan Distance (all performed equally well)
-            \item Shepard's Work Vote
+            \item Shepard's Work Voting scheme
             \item Equal Weighting
             \item \textbf{Results:} 95.1\% accuracy and 95.2\% F1 score
         \end{itemize}
@@ -21,16 +25,19 @@ The kNN algorithm was evaluated using several performance metrics, including acc
             \item Accuracy: 92.6\% $--$ 95.1\%
             \item F1 Score: 92.7\% $--$ 95.2\%
         \end{itemize}
-    
-    \item[\textbf{Key Observations:}]\leavevmode
-        \begin{itemize}
-            \item Manhattan Distance consistently performed well across all configurations.
-            \item Shepard's Work Voting scheme demonstrated superior results compared to alternative voting schemes.
-            \item The voting scheme had a significant impact on performance, particularly with higher k values.
-        \end{itemize}
 \end{description}
 
-\subsubsection*{Hepatitis Dataset Performance}
+\subsubsection*{Observations}
+Manhattan Distance consistently performed well across all configurations, with all top ten configurations using this distance metric.
+The combination of Manhattan Distance and Shepard's Work Vote with a higher value of k was particularly effective. 
+The higher performance of a larger k value suggests that the algorithm benefits from considering multiple neighbors when making predictions, perhaps
+due to the dataset's inherent complexity and noise present in the data. The equal weighting scheme also performed excellently,
+indicating that the dataset contains relatively a uniform
+distribution of meaningful data points.
+The F1 scores achieved across all configurations were consistently high, indicating a good balance between precision and recall.
+
+
+\subsubsection{Hepatitis Dataset Performance}
 
 \begin{description}
     \item[\textbf{Best Configuration:}]\leavevmode
@@ -55,34 +62,20 @@ The kNN algorithm was evaluated using several performance metrics, including acc
         \end{itemize}
 \end{description}
 
-The F1 scores achieved across all configurations were consistently high, indicating a good balance between precision and recall.
+\subsubsection*{Observations}
+The hepatitis dataset achieved its best performance with a k value of 1, indicating that the algorithm benefits from
+more localized decisions when making predictions when using this dataset.
+The Euclidean Distance metric performed best, particularly when combined with ReliefF weighting. This suggests that the dataset's features
+have varying degrees of importance, and ReliefF weighting helps capture these distinctions effectively.
+As also seen in the mushroom dataset, the F1 scores achieved across all configurations were consistently high,
+indicating a good balance between precision and recall.
 
-\paragraph{Impact of Different k Values}
-Analysis of the k parameter's influence on performance revealed distinct patterns across both datasets.
-For the mushroom dataset, k values of 3, 5, and 7 using Manhattan Distance with Shepard's Work Vote achieved identical top performance
-(95.1\% accuracy, 95.2\% F1), slightly outperforming k = 1 configurations (95.0\% accuracy, 95.1\% F1), and other configurations.
-However, the performance was notably sensitive to the voting scheme, as demonstrated by the decrease to approximately 93\% accuracy
-when using Inverse Distance Weighted voting with higher k values.
 
-For the hepatitis dataset, k = 1 consistently
-outperformed larger values, achieving the highest accuracy of 95.5\% with Euclidean distance and ReliefF weighting.
-This contrast between datasets suggests that the optimal k value is highly dependent
-on both the underlying data characteristics and the chosen voting scheme.
-The hepatitis dataset benefited from more localized decisions (k = 1), while the mushroom
-dataset showed slightly improved performance with ensemble decisions from multiple neighbors when using appropriate voting schemes.
+\subsubsection{Overall Comparison}
+While both datasets achieved high performance, the hepatitis dataset outperformed the mushroom dataset in terms of accuracy and F1 score.
+This difference may be due to the hepatitis dataset's smaller size and more distinct class separations,
+making it easier for the k-NN algorithm to make accurate predictions. These distinct class separations may also explain why the k = 1 configuration
+performed best on the hepatitis dataset, as the algorithm can make more precise decisions with fewer neighbors.
 
-\paragraph{Unexpected Findings and Limitations}
-Some unexpected patterns emerged from our k-NN analysis. First, while feature weighing schemes
-often improved the performance, the mushroom dataset achieved its best results with equal weighting. This suggests that the
-dataset's features are inherently balanced and do not require additional weighting to improve classification accuracy.
-Secondly, the high performance consistently across all voting schemes we tested was surprising, indicating that the 
-choice of voting schemes may be less critical for performance than previously assumed when other hyperparameters are optimized.
 
-However, our study revealed several important limitations. As shown in Tables 5 and 6, the standard
-kNN implementation faced significant computational and storage challenges, requiring 0.255 seconds
-per test instance for the mushroom dataset and storage of all 1000 training instances. 
-While dimensionality reduction techniques like CNN reduced storage requirements by
-81.1\% and improved testing speed by 74.5\%, this came at the cost of decreased accuracy (from 95.0\% to 92.5\%).
 
-This trade-off between computational efficiency and classification performance highlights
-a fundamental limitation of the k-NN algorithm in handling larger datasets.
