store individual times per fold for test/train

--- a/work2/notebooks/1.3-ZachParent-try-statistical-analysis.ipynb
+++ b/work2/notebooks/1.3-ZachParent-try-statistical-analysis.ipynb
@@ -38,11 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fold_cols = [f'fold{i}' for i in range(1, 11)]\n",
+    "f1_cols = [f'f1_{i}' for i in range(10)]\n",
     "\n",
     "for df in [knn_results_hepatitis, knn_reduction_results_hepatitis, svm_results_hepatitis]:\n",
-    "    df['mean_f1_score'] = df.loc[:, fold_cols].mean(axis=1)\n",
-    "    df['std_f1_score'] = df.loc[:, fold_cols].std(axis=1)\n"
+    "    df['mean_f1_score'] = df.loc[:, f1_cols].mean(axis=1)\n",
+    "    df['std_f1_score'] = df.loc[:, f1_cols].std(axis=1)\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "def friedman_test(df_with_f1_per_fold):\n",
     "    results = {\n",
-    "        i: df_with_f1_per_fold.loc[i, fold_cols] for i in df_with_f1_per_fold.index\n",
+    "        i: df_with_f1_per_fold.loc[i, f1_cols] for i in df_with_f1_per_fold.index\n",
     "    }\n",
     "    f1_df = pd.DataFrame(results)\n",
     "    statistic, p_value = stats.friedmanchisquare(*[f1_df[k] for k in f1_df])\n",
@@ -533,7 +533,7 @@
    "source": [
     "def nemenyi_test(df_with_f1_per_fold):\n",
     "    results = {\n",
-    "        i: df_with_f1_per_fold.loc[i, fold_cols] for i in df_with_f1_per_fold.index\n",
+    "        i: df_with_f1_per_fold.loc[i, f1_cols] for i in df_with_f1_per_fold.index\n",
     "    }\n",
     "    f1_df = pd.DataFrame(results)\n",
     "    return sp.posthoc_nemenyi_friedman(f1_df)"
