add cross-model comparison

--- a/work2/reports/tables/knn_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/knn_significant_pairs_hepatitis.tex
@@ -4,7 +4,7 @@
 \label{tab:knn_significant_pairs_hepatitis}
 \begin{tabular}{rlllr}
 \toprule
-K & Distance Func & Voting Func & Weighting Func & Mean F1 Score \\
+K & Distance Func & Voting Func & Weighting Func & Mean F1 \\
 \midrule
 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.969 \\
 1 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.969 \\
