added authors to readme. the guts of statistical analysis done

--- a/work2/reports/04-results-and-analysis/04.2-discussion.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion.tex
@@ -13,5 +13,6 @@ In this section, interpret the results, discuss their implications, and relate t
 \input{04-results-and-analysis/04.2.1-discussion-knn}
 \input{04-results-and-analysis/04.2.2-discussion-reduction}
 \input{04-results-and-analysis/04.2.3-discussion-svm}
+\input{04-results-and-analysis/04.2.4-statistical-analysis}
 
 % Add more content here as needed
