update instance reduction algs info in report

--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
@@ -1,11 +1,9 @@
-\subsubsection{Dimensionality Reduction Analysis}
+\subsubsection{Instance Reduction Analysis}
 \label{subsubsec:discussion-reduction}
 
-This section interprets the results of the dimensionality reduction techniques, discussing their impact on the analysis and visualization.
+This section interprets the results of the dimensionality reduction techniques, 
+discussing their impact on the analysis and visualization.
 
-% TODO: Discuss the effectiveness of each reduction algorithm (PCA, t-SNE, UMAP)
-% TODO: Compare the results of different reduction techniques
-% TODO: Analyze the impact of dimensionality reduction on classification performance
-% TODO: Address any unexpected findings or limitations of the reduction methods
-
-% Add more content here as needed
+Figure [INSERT FIGURE REF] shows the results of our analyzis in terms of accuracy, 
+training speed and storage reduction capbilities of the instance reduction techniques
+ implemented (\textit{i.e.}, GCNN, ENNTH and DROP3)
