Added title & names to report

--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -9,8 +9,8 @@
 
 % TODO: Consider adding a table of contents with \tableofcontents
 
-\title{Your Report Title}
-\author{Your Name}
+\title{Work 2 - Classification with Lazy Learning and SVM}
+\author{Zachary Parent, Sheena Lang, Kacper Poniatowski and Carlos Jiménez}
 \date{\today}
 
 \begin{document}
