generate figures and tables

--- a/work2/reports/tables/knn_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/knn_significant_pairs_mushroom.tex
@@ -4,16 +4,15 @@
 \label{tab:knn_significant_pairs_mushroom}
 \begin{tabular}{rlllr}
 \toprule
-K & Distance Func & Voting Func & Weighting Func & Mean F1 \\
+k & distance_func & voting_func & weighting_func & mean_f1 \\
 \midrule
-1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.951 \\
-1 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.901 \\
-3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.928 \\
-3 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.728 \\
-5 & ManhattanDistance & ShepardsWorkVote & InformationGainWeighting & 0.670 \\
-5 & ChebyshevDistance & InverseDistanceWeightedVote & InformationGainWeighting & 0.643 \\
-7 & EuclideanDistance & MajorityClassVote & InformationGainWeighting & 0.670 \\
-7 & ChebyshevDistance & ShepardsWorkVote & ReliefFWeighting & 0.636 \\
+1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 \\
+1 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 1.000 \\
+3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 \\
+3 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.979 \\
+5 & ManhattanDistance & ShepardsWorkVote & InformationGainWeighting & 0.650 \\
+7 & EuclideanDistance & MajorityClassVote & InformationGainWeighting & 0.650 \\
+7 & ChebyshevDistance & ShepardsWorkVote & ReliefFWeighting & 0.589 \\
 \bottomrule
 \end{tabular}
 \end{table}
