--- a/work2/reports/tables/svm_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_significant_pairs_hepatitis.tex
@@ -4,11 +4,11 @@
 \label{tab:svm_significant_pairs_hepatitis}
 \begin{tabular}{rlrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrl}
 \toprule
-C & Kernel Type & F1 0 & F1 1 & F1 2 & F1 3 & F1 4 & F1 5 & F1 6 & F1 7 & F1 8 & F1 9 & Train Time 0 & Train Time 1 & Train Time 2 & Train Time 3 & Train Time 4 & Train Time 5 & Train Time 6 & Train Time 7 & Train Time 8 & Train Time 9 & Test Time 0 & Test Time 1 & Test Time 2 & Test Time 3 & Test Time 4 & Test Time 5 & Test Time 6 & Test Time 7 & Test Time 8 & Test Time 9 & Mean F1 & Mean Train Time & Mean Test Time & Model Label \\
+C & kernel_type & f1_0 & f1_1 & f1_2 & f1_3 & f1_4 & f1_5 & f1_6 & f1_7 & f1_8 & f1_9 & train_time_0 & train_time_1 & train_time_2 & train_time_3 & train_time_4 & train_time_5 & train_time_6 & train_time_7 & train_time_8 & train_time_9 & test_time_0 & test_time_1 & test_time_2 & test_time_3 & test_time_4 & test_time_5 & test_time_6 & test_time_7 & test_time_8 & test_time_9 & mean_f1 & mean_train_time & mean_test_time & model_label \\
 \midrule
 3 & rbf & 0.857 & 0.966 & 1.000 & 1.000 & 1.000 & 1.000 & 0.909 & 1.000 & 0.957 & 1.000 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.969 & 0.001 & 0.000 & C3Rbf \\
 5 & rbf & 0.828 & 0.966 & 1.000 & 1.000 & 0.960 & 1.000 & 0.957 & 1.000 & 1.000 & 1.000 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.971 & 0.001 & 0.000 & C5Rbf \\
-7 & sigmoid & 0.857 & 0.667 & 0.815 & 0.909 & 0.846 & 0.846 & 0.846 & 0.750 & 0.909 & 0.846 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.829 & 0.001 & 0.000 & C7Sig \\
+7 & sigmoid & 0.857 & 0.667 & 0.815 & 0.909 & 0.846 & 0.846 & 0.846 & 0.750 & 0.909 & 0.846 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.829 & 0.001 & 0.000 & C7Sig \\
 \bottomrule
 \end{tabular}
 \end{table}
