--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-reduction.tex
@@ -24,7 +24,7 @@ This reduction in performance can be attributed to Drop3's aggressive removal of
 
 When analyzing the Mushroom dataset with KNN, all techniques achieve a perfect F1 score of 1.0, indicating no loss in predictive accuracy. 
 GGCN stands out by significantly reducing storage from 7311.6 units to 3519.8 units while also decreasing testing time from 72.78 seconds to 33.70 seconds. 
-This effectiveness arises from GGCN’s ability to eliminate redundancy while retaining essential data points, making it particularly advantageous for large datasets. 
+This effectiveness arises from GGCN's ability to eliminate redundancy while retaining essential data points, making it particularly advantageous for large datasets. 
 
 ENNTH and Drop3 retain the same storage requirement as the control, both at 7311.6 units, with only slight improvements in training and testing time. 
 ENNTH preserves the perfect F1 score by focusing on noise removal, which is less impactful in this dataset due to its inherent cleanliness. 
@@ -32,10 +32,10 @@ Similarly, Drop3 achieves a perfect F1 score, as its filtering approach does not
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/work2/reports/figures/KNN_reduction_effects_hepatitis.png}
-    \includegraphics[width=0.45\textwidth]{figures/work2/reports/figures/KNN_reduction_effects_hepatitis.png}
+    \includegraphics[width=0.45\textwidth]{figures/KNN_reduction_effects_hepatitis.png}
+    \includegraphics[width=0.45\textwidth]{figures/KNN_reduction_effects_hepatitis.png}
     \caption{Class distributions}
-    \label{fig:class-distributions}
+    \label{fig:KNN-reduction-effects}
 \end{figure}
 
 In the context of the Hepatitis dataset using SVM, using no reduction method produces a high F1 score of 0.9719, requiring moderate storage of 139.5 units and a testing time of 0.0037 seconds.
@@ -49,14 +49,14 @@ For SVM applied to the Mushroom dataset, all methods, yield a perfect F1 score o
 GGCN proves especially effective by reducing storage from 7311.6 units to 3519.8 units and decreasing testing time from 0.0421 seconds to 0.0337 seconds.
 
 ENNTH and Drop3 maintain the same storage requirements as the control, both at 7311.6 units, with minor improvements in training and testing time.
-ENNTH’s focus on noise removal contributes to its sustained perfect F1 score, while Drop3’s method similarly does not impact storage significantly in this densely populated dataset.
+ENNTH's focus on noise removal contributes to its sustained perfect F1 score, while Drop3's method similarly does not impact storage significantly in this densely populated dataset.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/work2/reports/figures/KNN_reduction_effects_hepatitis.png}
-    \includegraphics[width=0.45\textwidth]{figures/work2/reports/figures/KNN_reduction_effects_hepatitis.png}
+    \includegraphics[width=0.45\textwidth]{figures/SVM_reduction_effects_hepatitis.png}
+    \includegraphics[width=0.45\textwidth]{figures/SVM_reduction_effects_hepatitis.png}
     \caption{Class distributions}
-    \label{fig:class-distributions}
+    \label{fig:SVM-reduction-effects}
 \end{figure}
 
 Overall, GGCN emerges as the most effective reduction technique across both models, showcasing substantial efficiency gains while preserving predictive accuracy, particularly for larger datasets like Mushroom.
